--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,5 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 
 Assets/Scenes/Kosmo Stuff/Walls/.autosave/
+
+Assets/Scenes/Kosmo Stuff/Substance Designer/.autosave/
