--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -3,6 +3,7 @@
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.ai.navigation": "2.0.5",
     "com.unity.animation.rigging": "1.3.0",
+    "com.unity.behavior": "1.0.7",
     "com.unity.collab-proxy": "2.5.2",
     "com.unity.feature.cinematic": "1.0.0",
     "com.unity.ide.rider": "3.0.31",
