--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,5 @@ crashlytics-build.properties
 Assets/Scenes/Kosmo Stuff/Walls/.autosave/
 
 Assets/Scenes/Kosmo Stuff/Substance Designer/.autosave/
+
+fmod_editor.log
