--- a/.gitignore
+++ b/.gitignore
@@ -92,3 +92,4 @@ Assets/Scenes/Kosmo Stuff/Substance Designer/.autosave/
 
 # Log files can be ignored.
 fmod_editor.log
+Assets/Plugins/FMOD/Cache/Editor/FMODStudioCache.asset
