--- a/.gitignore
+++ b/.gitignore
@@ -93,3 +93,5 @@ Assets/Scenes/Kosmo Stuff/Substance Designer/.autosave/
 # Log files can be ignored.
 fmod_editor.log
 Assets/Plugins/FMOD/Cache/Editor/FMODStudioCache.asset
+
+Assets/Sandbox/Fonts/Gamaliel SDF.asset
